Fixed login button alignment  and headings alignment

--- a/client/src/app/landing-page/landing-page.component.css
+++ b/client/src/app/landing-page/landing-page.component.css
@@ -33,5 +33,5 @@
   transform: translate(-50%, -50%);
 }
 .loginbtn{
-  padding-left: 30%;
+  padding-left: 25%;
 }
